# keel

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
crates/bench/: Cargo.toml
crates/bench/src/: main.rs  qbench.rs  tpch.rs
crates/btree/: Cargo.toml
crates/btree/examples/: scaling.rs
crates/btree/src/: lib.rs
crates/btree/tests/: concurrent_oracle.rs  on_cbuffer.rs  root_split_race.rs  split_publish_order.rs
crates/buffer/: Cargo.toml
crates/buffer/src/: lib.rs
crates/cbuffer/: Cargo.toml
crates/cbuffer/src/: lib.rs
crates/cbuffer/tests/: alloc.rs  crash.rs  dirty.rs  flush_fail.rs  format.rs  nested_guards.rs  policy.rs  race.rs
crates/cheap/: Cargo.toml
crates/cheap/src/: lib.rs
crates/cheap/tests/: checkpoint_race.rs  checksum.rs  crash.rs  differential.rs  threaded.rs
crates/ckv/: Cargo.toml
crates/ckv/src/: lib.rs
crates/ckv/tests/: crash.rs  detect.rs  threaded.rs
crates/db/: Cargo.toml
crates/db/src/: borrowtrack.rs  exec.rs  lib.rs  wal.rs
crates/db/tests/: aggregate_differential.rs  borrowtrack_selftest.rs  concurrency_claims.rs  concurrent_crash.rs  differential.rs  lifecycle_differential.rs  multijoin_differential.rs  on_cbuffer.rs  sql_crash.rs  tpch_subset.rs  wal_crash.rs
crates/dbcheck/: Cargo.toml
crates/dbcheck/src/: lib.rs  main.rs
crates/dbcheck/tests/: crash_smoke.rs
crates/faultfs/: Cargo.toml
crates/faultfs/src/: lib.rs
crates/heap/: Cargo.toml
crates/heap/src/: lib.rs
crates/heap/tests/: on_cbuffer.rs
crates/keys/: Cargo.toml
crates/keys/src/: lib.rs
crates/latch/: Cargo.toml
crates/latch/src/: lib.rs
crates/latch/tests/: clock.rs  pin.rs  race.rs
crates/lockmgr/: Cargo.toml
crates/lockmgr/src/: lib.rs
crates/lockmgr/tests/: threaded.rs
crates/mvcc/: Cargo.toml
crates/mvcc/src/: lib.rs
crates/mvcc/tests/: threaded.rs
crates/page/: Cargo.toml
crates/page/src/: lib.rs
crates/pager/: Cargo.toml
crates/pager/src/: lib.rs
crates/pager/tests/: differential.rs  recovery.rs
crates/pageview/: Cargo.toml
crates/pageview/src/: main.rs
crates/rng/: Cargo.toml
crates/rng/src/: lib.rs
crates/shell/: Cargo.toml
crates/shell/src/: main.rs
crates/sql/: Cargo.toml
crates/sql/src/: ast.rs  gen.rs  lex.rs  lib.rs  parse.rs  refengine.rs
crates/stats/: Cargo.toml
crates/stats/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/vexec/: Cargo.toml
crates/vexec/src/: lib.rs
crates/vfs/: Cargo.toml
crates/vfs/src/: lib.rs
crates/wal/: Cargo.toml
crates/wal/src/: lib.rs
crates/wal/tests/: on_cbuffer.rs
docs/: buglog.md  decisions.md  semantics.md  writeup.md
