[package]
name = "keel-cbuffer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
keel-vfs = { path = "../vfs" }
keel-page = { path = "../page" }
keel-latch = { path = "../latch" }

[dev-dependencies]
keel-faultfs = { path = "../faultfs" }
