[package]
name = "keel-pager"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
keel-buffer = { path = "../buffer" }
keel-cbuffer = { path = "../cbuffer" }
keel-page = { path = "../page" }
keel-vfs = { path = "../vfs" }
